[package]
name = "trace_id_layer"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
http = "1"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v7", "v4"] }


[dev-dependencies]
anyhow = "1.0.100"
axum = "0.8"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.22"
